<resources>
    <string name="app_name">AchieveMore</string>
    <string name="created">Created by: </string>
    <string name="version">Version: </string>
    <string name="build">Build Type: </string>
    <string name="timesOpened">Total Times Opened: </string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_login_in_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
</resources>
