<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/idUsernameTIET"
        android:layout_width="252dp"
        android:layout_height="45dp"
        android:hint="@string/prompt_username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/idPasswordTIET"
        android:layout_width="252dp"
        android:layout_height="45dp"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:password="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idUsernameTIET"
        app:layout_constraintVertical_bias="0.089" />

    <TextView
        android:id="@+id/idVersionTV"
        android:layout_width="156dp"
        android:layout_height="22dp"
        android:text="@string/version"
        app:layout_constraintBottom_toTopOf="@+id/idbuildTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.988" />

    <TextView
        android:id="@+id/idbuildTV"
        android:layout_width="157dp"
        android:layout_height="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/build"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/idusernameErrorTV"
        android:layout_width="249dp"
        android:layout_height="19dp"
        app:layout_constraintBottom_toTopOf="@+id/idUsernameTIET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.947" />

    <TextView
        android:id="@+id/idpasswordErrorTV"
        android:layout_width="249dp"
        android:layout_height="19dp"
        app:layout_constraintBottom_toTopOf="@+id/idPasswordTIET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idUsernameTIET" />

    <Button
        android:id="@+id/idLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/action_login_in_short"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515" />

    <Button
        android:id="@+id/idRegisterBtn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="97dp"
        android:layout_height="35dp"
        android:layout_marginTop="68dp"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="colorPrimary"
        android:textColorLink="@color/colorPrimary"
        android:textCursorDrawable="colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPasswordTIET" />

</androidx.constraintlayout.widget.ConstraintLayout>